--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
     <main>
         
-        <section class="hero">
+        <div class="hero">
             <div class="hero-content">
                 <a href="products.html" class="shop-now-btn">Shop Now</a>
             </div>
-        </section>
+        </div>
     
 
         <!-- Collections Section -->
