--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta name="description" content="View our products and add to cart or just browse">
     <meta name="keywords" content="shopping,products,catelog, shop">
   <title>Our Collection - Your Jewelry Shop</title>
-  <link rel="stylesheet" href="products_styles.css"> <!-- Link to specific styles for products page -->
+  <link rel="stylesheet" href="products_styles.css"> 
     <script src="cart.js"></script>
 
 </head>
@@ -37,13 +37,13 @@
 <section class="title-section">
     <div class="title-content">
         <!-- Logo Image (optional) -->
-        <img src="https://i.imgur.com/J5TYXOS.png" referrerpolicy="no-referrer"alt="Tribal Surf Style Logo" class="title-logo">
+        <img src="https://i.imgur.com/J5TYXOS.png" referrerpolicy="no-referrer" alt="Tribal Surf Style Logo" class="title-logo">
 
         <!-- Page Title -->
         <h1 class="page-title">Necklaces and Bracelets</h1>
 
         <!-- Site Name -->
-        <p class="site-name">TribalSurfStyle</p></section>
+        <p> class="site-name">TribalSurfStyle</p> </section>
     
    
   <!-- Products Grid -->
