--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
 
         <h1 class="page-title">Necklaces and Bracelets</h1>
 
-        <p> class="site-name">TribalSurfStyle</p> </section>
+        <p class="site-name">TribalSurfStyle</p> </section>
     
    
   <div class="products-grid">
