--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Home, Main, Intro">
     <title>Jewelry Shop</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="cartcounter.js"></script>
 
 </head>
 <body>
@@ -34,30 +35,32 @@
         <div class="hero">
             <div class="hero-content">
                 <a href="products.html" class="shop-now-btn">Shop Now</a>
-            </div>
-        </div>
+            </div></div>
+        
     
 
+        <!-- Collections Section -->
         <section class="collections">
             <div class="collections-content">
                 <h2>Explore Our Collections</h2>
                 <div class="collection-items">
                     <div class="collection-item">
-                        <h3>Necklaces</h3>
+                        <h3>Necklaces & Bracelets</h3>
                         <a href="products.html?category=necklaces">
                             <img src="https://i.imgur.com/jVAlaQW.jpeg" referrerpolicy="no-referrer" alt="Necklaces">
                         </a>
                     </div>
                     <div class="collection-item">
-                        <h3>Bracelets</h3>
-                        <a href="products.html?category=bracelets">
-                            <img src="https://i.imgur.com/7FdoEyy.jpeg" referrerpolicy="no-referrer" alt="Bracelet">
+                        <h3>Woodburning's</h3>
+                        <a href="products2.html?category=bracelets">
+                            <img src="https://i.imgur.com/ktZDUFe.jpeg" referrerpolicy="no-referrer" alt="Bracelet">
                         </a>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- About Section -->
         <section class="about">
             <div class="about-content">
                 <h2>Made for everyday wear</h2>
