--- a/custom.html
+++ b/custom.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="custom,order,form">
     <title>Custom Order - Jewelry Shop</title>
     <link rel="stylesheet" href="custom_styles.css">
+    <script src="cartcounter.js"></script>
 </head>
 <body>
     <header>
@@ -30,10 +31,13 @@
          
 <section class="title-section">
     <div class="title-content">
+        <!-- Logo Image (optional) -->
         <img src="https://i.imgur.com/J5TYXOS.png" referrerpolicy="no-referrer"alt="Tribal Surf Style Logo" class="title-logo">
 
+        <!-- Page Title -->
         <h1 class="page-title"> Custom Order Page</h1>
 
+        <!-- Site Name -->
         <p class="site-name">TribalSurfStyle</p></section>
     
    
@@ -53,6 +57,7 @@
             <div class="animated-pearl"></div>
         </section>
 
+        <!-- Custom Order Form using Formspree -->
         <section class="custom-form">
             <form action="https://formspree.io/f/xanyperv" method="POST">
                 <label for="name">Your Name:</label>
