--- a/products2.html
+++ b/products2.html
@@ -81,7 +81,7 @@
   </div>
 
   <footer>
-        <p>&copy; Tribal Surf Style | Contact us at <a href="tribalsurf30a@gmail.com">tribalsurf30a@gmail.com</a></p>
+        <p>&copy; Tribal Surf Style | Contact us at <a href="mailto:tribalsurf30a@gmail.com">tribalsurf30a@gmail.com</a></p>
         <div class="social-media">
             <a href="https://www.instagram.com/tribalsurf30a" target="_blank">
                 <img src="https://i.imgur.com/6QzKhtx.png" referrerpolicy="no-referrer" alt="Instagram" class="social-icon">
